--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
+    "monaco-editor": "^0.54.0",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0"
