--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "mongoose": "^8.19.3",
     "next": "16.0.1",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
